name:                random-bench
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/random-bench#readme
license:             BSD3
license-file:        LICENSE
author:              Arguggi
maintainer:          haskell@arguggi.co.uk
copyright:           2016 Arguggi
category:            Benchmarking
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable random-bench
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , containers
                     , deepseq
                     , mersenne-random-pure64
                     , mtl
                     , mwc-random
                     , MonadRandom
                     , vector
  default-language:    Haskell2010

benchmark random-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , criterion
                     , containers
                     , mersenne-random-pure64
                     , mtl
                     , mwc-random
                     , MonadRandom
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Arguggi/random-bench
