name:                random-bench
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/random-bench#readme
license:             BSD3
license-file:        LICENSE
author:              Arguggi
maintainer:          haskell@arguggi.co.uk
copyright:           2016 Arguggi
category:            Benchmarking
build-type:          Simple
cabal-version:       >=1.10

executable random-benchmark
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , criterion
                     , containers
                     , mersenne-random-pure64
                     , mtl
                     , mwc-random
                     , MonadRandom
                     , tf-random
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Arguggi/random-bench
